[gd_scene load_steps=10 format=2]

[ext_resource path="res://menuSprites/_ExitGame.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://menuSprites/LevelSelect.png" type="Texture" id=3]
[ext_resource path="res://menuSprites/_StartGame.png" type="Texture" id=4]
[ext_resource path="res://music/officialGameMusic/TitleMenuSong.wav" type="AudioStream" id=5]
[ext_resource path="res://menuSprites/_LevelSelect.png" type="Texture" id=6]
[ext_resource path="res://Game-Logo3.png" type="Texture" id=7]
[ext_resource path="res://menuSprites/StartGame.png" type="Texture" id=8]
[ext_resource path="res://menuSprites/ExitGame.png" type="Texture" id=9]

[node name="TitleScreen" type="Node"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 137.0
margin_top = 20.0
margin_right = 887.0
margin_bottom = 492.0
size_flags_horizontal = 4
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 750.0
margin_bottom = 255.0
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 210.0
margin_top = 255.0
margin_right = 540.0
margin_bottom = 367.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 330.0
margin_bottom = 35.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 4 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 330.0
margin_bottom = 74.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 6 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 330.0
margin_bottom = 112.0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
